@@ -21,6 +21,7 @@ News
 * some cleanups making seeking faster
 * added visual effects for audio-only files
 * added a statusbar
+* added CDDA support (Digital CD playback)
 
 0.13.1:
 * Make it work again on glib-2.x based platforms
